<resources>
    <string name="app_name">Sportmonks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_continent_fragment">Select a Continent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_countries_fragment">Countries of %s</string>
    <string name="hello_leagues_fragment">Hello leagues fragment</string>
    <string name="try_again_button">Try again</string>
    <string name="leagues">Leagues</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>
    <string name="noleagues">No recent Leagues</string>
    <string name="noteam">No Teams</string>
    <string name="teams_of">Teams of %s</string>
    <string name="hello_player_fragment">Players of %s</string>
    <string name="age">Age : %s</string>
    <string name="height">Height : %s</string>
    <string name="weight">Weight : %s</string>
    <string name="fixtures">Fixtures of %s</string>
</resources>