<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="5dp"
        android:padding="15dp"
        card_view:cardBackgroundColor="@color/green"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_player"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
           android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:orientation="vertical">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"

            android:text=" text"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/text_header_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:text="@string/age"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:text="@string/height"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/weight"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"/>
</LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>