<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_country"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            tools:ignore="ContentDescription" />
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_weight=".5"
    android:orientation="vertical">
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:text="Demo text"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="25sp"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/official_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="5dp"
        android:maxLines="3"
        android:text="Demo text"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"/>
</LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="0.3"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/leagues"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/leagues"/>
                <Button
                    android:id="@+id/teams"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/teams"/>
                <Button
                    android:id="@+id/players"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/players"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>